<resources>
    <string name="app_name">lection3</string>

    <string name="sign_in">Войти</string>
    <string name="sign_in_title">@string/sign_in</string>
    <string name="sign_in_login_hint">Логин</string>
    <string name="sign_in_password_hint">Пароль</string>
    <string name="sign_in_action">@string/sign_in</string>
    <string name="error_text">Ошибка %s()</string>
    <string name="inStock_true">%s (в наличии) \n</string>
    <string name="inStock_false">%s (нет в наличии) \n</string>
    <string name="button_start">Начать</string>
    <string name="button_error">Повторить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <color name="background">#dddddd</color>


    <string name="load_error">Oops, can\'t load data</string>
    <string name="try_again">Повторить</string>
    <string name="enable_errors">Enable Errors</string>
    <!-- Profile fragment -->
    <string name="name_surname_profile_text">%s %s</string>
    <string name="text_version">Приложение 1.0.0 (117)</string>

    <!-- SignIn fragment -->
    <string name="length_little">Поле содержит менее 8 символов</string>
    <string name="error_email">Некорректный адрес электронной почты</string>
    <string name="repeat_button_text">Повторить</string>
    <string name="fragment_tittle_add_order">Оформление заказа</string>
    <string name="home_hint">Дом</string>
    <string name="room_hint">Квартира</string>
    <string name="text_order_date">Дата доставки</string>
    <string name="buy_order">Купить за</string>
    <string name="search_view">Поиск</string>
    <string name="search_text">Адрес доставки</string>
    <string name="error_nothing">Неизвестная ошибка</string>
    <string name="error_network">Проблемы с интернетом</string>
    <string name="map_toast">Пожалуйста включите ваше местоположение</string>
    <string name="sum_text_order">Купить за %d</string>


    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>

    <string name="calendar_text">%s, %s %s</string>
    <string name="date_string_order">Заказ №%d от %s.%s.%s %s</string>
    <string name="date_string">Дата доставки: %s.%s.%s в %s</string>
    <string name="adress_order_string">Адрес доставки: %s</string>
    <string name="simple_date_formatter">MMMM</string>
    <string name="profile_name_hint">Имя</string>
    <string name="profile_surname_hint">Фамилия</string>
    <string name="work_hint_profile">Род деятельности</string>
    <string name="profile_work_switch_hint">Другой род деятельности</string>
    <string name="transform_text_bt">Изменить</string>
    <string name="work_another">Другое</string>

    <string name="action_settings">Отменить</string>
    <string name="add_photo">Сделать снимок</string>
    <string name="in_work">В работе</string>
    <string name="canceled_status">Отменен</string>
    <string name="cancel_order_status">"Был отменён %s.%s.%s в %s "</string>
    <string name="empty">Пустота</string>
    <string name="mistake">Ошибка</string>
    <string name="check_status_order">in_work</string>
    <string name="toolbar_house_selection_text">Выбор дома</string>
    <string name="all_order_tab">Все %d</string>
    <string name="active_order_tab">Все %d</string>
    <string name="name_lastName">Имя Фамилия</string>
    <string name="job_title">Должность</string>
    <string name="not_size">Выберите размер</string>
    <string name="menu_item_сhoose">Выбрать</string>
    <string name="time_format">hh:mm:ss</string>
    <string name="date_format_orders">dd/M/yyyy hh:mm:ss</string>
    <string name="date_format">%d-%d-%dT%s.512Z</string>
    <string name="text_cancel_order">Заказ №%s от %d был успешно отменён</string>
    <string name="text_add_order">Заказ №%d от %s был успешно оформлен</string>
    <string name="text_error_order">Произошла ошибка во время отмены заказа</string>
    <string name="text_map_coordinate">Укажитие место доставки</string>
    <string name="default_coordinate">54.18,45.18</string>
</resources>