<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain_layout_add_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.ui.catalog.AddOrderFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bt_back"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/bt_back"
        app:layout_constraintStart_toEndOf="@+id/bt_back"
        app:layout_constraintTop_toTopOf="@+id/bt_back"
        app:title="@string/fragment_tittle_add_order"
        app:titleTextColor="@color/white">

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image_add_order"
        style="@style/ImageRcViewProduct"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginBottom="507dp"
        app:cardCornerRadius="@dimen/normal_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <ImageView
            android:id="@+id/image_order_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearBook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_100"
        android:layout_marginEnd="@dimen/normal_100"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_image_add_order"
        app:layout_constraintTop_toTopOf="@+id/cv_image_add_order">

        <TextView
            android:id="@+id/textOrderTitle"
            style="@style/TextAppearance.H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nike Tampa Bay Buccaneers " />

        <TextView
            android:id="@+id/textOrderDepartament"
            style="@style/TextAppearance.H2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Джерси" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        app:endIconDrawable="@drawable/ic_end_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_image_add_order">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/home_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/il_home">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_hint"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_order_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:endIconDrawable="@drawable/ic_end_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/il_room">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_order_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/text_order_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_count_order"
        app:layout_constraintEnd_toEndOf="@+id/il_home"
        app:layout_constraintTop_toBottomOf="@+id/linearBook">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/decrement"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@drawable/background_bt_left_count_order_no_click"
            android:gravity="center"
            android:text="-" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/countOrder"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/background_bt_center_count_order"
            android:gravity="center"
            android:text="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/increment"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="@drawable/background_bt_right_count_order_no_click"
            android:gravity="center"
            android:text="+" />
    </LinearLayout>

    <com.meridiane.lection3.presentation.ui.signin.ButtonProgressBar
        android:id="@+id/materialButtonOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>